@@ -1149,6 +1149,11 @@ EOD;
 	 * @param string the attribute
 	 * @param array additional HTML attributes. Besides normal HTML attributes, a few special
 	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
+	 * Since version 1.0.9, a special option named 'uncheckValue' is available that can be used to specify
+	 * the value returned when the radiobutton is not checked. By default, this value is '0'.
+	 * Internally, a hidden field is rendered so that when the radiobutton is not checked,
+	 * we can still obtain the posted uncheck value.
+	 * If 'uncheckValue' is set as NULL, the hidden field will not be rendered.
 	 * @return string the generated radio button
 	 * @see clientChange
 	 * @see activeInputField
@@ -1161,9 +1166,19 @@ EOD;
 		if(!isset($htmlOptions['checked']) && $model->$attribute==$htmlOptions['value'])
 			$htmlOptions['checked']='checked';
 		self::clientChange('click',$htmlOptions);
+
+		if(array_key_exists('uncheckValue',$htmlOptions))
+		{
+			$uncheck=$htmlOptions['uncheckValue'];
+			unset($htmlOptions['uncheckValue']);
+		}
+		else
+			$uncheck='0';
+
+		$hidden=$uncheck!==null ? self::hiddenField($htmlOptions['name'],$uncheck,array('id'=>self::ID_PREFIX.$htmlOptions['id'])) : '';
+
 		// add a hidden field so that if the radio button is not selected, it still submits a value
-		return self::hiddenField($htmlOptions['name'],$htmlOptions['value']?0:-1,array('id'=>self::ID_PREFIX.$htmlOptions['id']))
-			. self::activeInputField('radio',$model,$attribute,$htmlOptions);
+		return $hidden . self::activeInputField('radio',$model,$attribute,$htmlOptions);
 	}
 
 	/**
@@ -1177,6 +1192,9 @@ EOD;
 	 * attributes are also recognized (see {@link clientChange} and {@link tag} for more details.)
 	 * Since version 1.0.2, a special option named 'uncheckValue' is available that can be used to specify
 	 * the value returned when the checkbox is not checked. By default, this value is '0'.
+	 * Internally, a hidden field is rendered so that when the checkbox is not checked,
+	 * we can still obtain the posted uncheck value.
+	 * If 'uncheckValue' is set as NULL, the hidden field will not be rendered.
 	 * @return string the generated check box
 	 * @see clientChange
 	 * @see activeInputField
@@ -1190,7 +1208,7 @@ EOD;
 			$htmlOptions['checked']='checked';
 		self::clientChange('click',$htmlOptions);
 
-		if(isset($htmlOptions['uncheckValue']))
+		if(array_key_exists('uncheckValue',$htmlOptions))
 		{
 			$uncheck=$htmlOptions['uncheckValue'];
 			unset($htmlOptions['uncheckValue']);
@@ -1198,8 +1216,9 @@ EOD;
 		else
 			$uncheck='0';
 
-		return self::hiddenField($htmlOptions['name'],$uncheck,array('id'=>self::ID_PREFIX.$htmlOptions['id']))
-			. self::activeInputField('checkbox',$model,$attribute,$htmlOptions);
+		$hidden=$uncheck!==null ? self::hiddenField($htmlOptions['name'],$uncheck,array('id'=>self::ID_PREFIX.$htmlOptions['id'])) : '';
+
+		return $hidden . self::activeInputField('checkbox',$model,$attribute,$htmlOptions);
 	}
 
 	/**
